--- a/package.json
+++ b/package.json
@@ -57,10 +57,14 @@
     "imports-loader": "^0.6.5",
     "jasmine": "^2.5.2",
     "karma": "^1.3.0",
+    "karma-babel-preprocessor": "^6.0.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.0.2",
-    "node-sass": "^3.13.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-sass-preprocessor": "0.0.1",
+    "karma-scss-preprocessor": "^2.0.0",
+    "karma-webpack": "^1.8.0",
+    "node-sass": "^3.13.1",
     "null-loader": "^0.1.1",
     "postcss-cli": "2.6.0",
     "postcss-loader": "^1.2.0",
