--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "technolibs": "1.1.0",
-    "json-schema-mock": "0.0.8",
-    "techno-gendoc": "0.4.1"
+    "json-schema-mock": "0.0.8"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.3",
