--- a/package.json
+++ b/package.json
@@ -27,7 +27,23 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "technolibs": "1.1.0",
-    "json-schema-mock": "0.0.8"
+    "json-schema-mock": "0.0.8",
+    "autoprefixer": "^6.5.3",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.9",
+    "babel-plugin-transform-strict-mode": "^6.18.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-latest": "^6.16.0",
+    "clean-webpack-plugin": "^0.1.14",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.25.0",
+    "eventsource-polyfill": "^0.9.6",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "file-loader": "^0.9.0",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.24.1",
+    "webpack": "^2.1.0-beta.27",
+    "precss": "^1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.3",
