--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "sevrer.js",
   "scripts": {
-    "test": "karma start --single-run",
+    "not_test": "karma start --single-run",
     "lint": "eslint './**/*.js'",
     "fest": "./node_modules/.bin/fest-build --dir=public/components/",
     "karma:start": "karma start",
