--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "scripts": {
     "not_test": "karma start --single-run",
     "lint": "eslint './**/*.js'",
-    "fest": "./node_modules/.bin/fest-build --dir=public/components/",
     "karma:start": "karma start",
     "karma:run": "karma run",
     "start": "node server.js",
-    "css": "sass public/css/main.scss public/css/main.css && postcss --local-plugins --use autoprefixer -o public/css/main.compiled.css public/css/main.css",
     "webpack": "webpack --display-error-details"
   },
   "repository": {
@@ -36,17 +34,13 @@
     "babel-polyfill": "^6.16.0",
     "babel-preset-latest": "^6.16.0",
     "babylon-file-loader": "^0.1.0",
+    "babylonjs": "^2.5.0",
     "clean-webpack-plugin": "^0.1.14",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.25.0",
-    "eslint": "^3.5.0",
-    "eslint-config-airbnb": "11.1.0",
-    "eslint-config-standard": "^6.1.0",
-    "eslint-plugin-import": "1.15.0",
-    "eslint-plugin-jsx-a11y": "2.2.2",
-    "eslint-plugin-promise": "^3.3.0",
-    "eslint-plugin-react": "6.2.2",
-    "eslint-plugin-standard": "^2.0.1",
+    "eslint": "^3.16.1",
+    "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-plugin-import": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "fest": "^0.12.1",
